runs/runs/github.com/data-8/textbook/logs/test-notebook-content-chapters-09-Randomness.ipynb-2020-07-03T06.21.txt
[I 200703 06:26:41 inrepo:35] Testing notebook content/chapters/09/Randomness.ipynb
[I 200703 06:26:42 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 76, in <module>
    main()
  File "/src/inrepo.py", line 72, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 38, in run_notebook
    exported = executenb(nb, cwd=os.path.dirname(nb_path))
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
5 = 10/2
------------------

[0;36m  File [0;32m"<ipython-input-5-e8c755f5e450>"[0;36m, line [0;32m1[0m
[0;31m    5 = 10/2[0m
[0m            ^[0m
[0;31mSyntaxError[0m[0;31m:[0m can't assign to literal

SyntaxError: can't assign to literal (<ipython-input-5-e8c755f5e450>, line 1)


Container exited with status: {'Error': None, 'StatusCode': 1}
